# Md4Claw

./: BUILD_GUIDE.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  plan.md  promise.md
.claude/: ralph-loop.local.md
frontend/appflowy_flutter/lib/plugins/document/presentation/editor_plugins/ai/operations/: ai_writer_cubit.dart  ai_writer_entities.dart
frontend/rust-lib/: Cargo.toml
frontend/rust-lib/appflowy-mcp-server/: Cargo.toml
frontend/rust-lib/appflowy-mcp-server/src/: document_xml.rs  main.rs  mcp_protocol.rs  storage.rs  tools.rs
frontend/rust-lib/flowy-ai/src/: ai_manager.rs  claude_code.rs  lib.rs
frontend/rust-lib/flowy-ai/src/middleware/: chat_service_mw.rs
